# WAVReader

./: CMakeLists.txt  README.md
Header/: WavReader.h  WavReaderConfig.h.in
Source/: WavReader.cpp
